public class DigitalProduct extends Product {
}