public class PhysicalProduct extends Product implements Taxable {
}