public class ShoppingCart {
}